// Django Todo List Application Database Schema
// PostgreSQL

Project "Todo List Application" {
  database_type: "PostgreSQL"
  Note: "A Django-based todo list application with user authentication via AllAuth"
}

Table auth_user {
  id int [pk, increment]
  username varchar(150) [unique, not null]
  password varchar(128) [not null]
  date_joined timestamp [default: `now()`, not null]
  
  indexes {
    username
    email
  }
}

Table todo_list {
  id int [pk, increment]
  title varchar(255) [not null]
  description text [null]
  user_id int [ref: > auth_user.id, not null]
  created_at timestamp [default: `now()`, not null]
  updated_at timestamp [default: `now()`, not null]
  
  indexes {
    user_id
    created_at
  }
}

Table todo_item {
  id int [pk, increment]
  todo_list_id int [ref: > todo_list.id, not null]
  item_text varchar(255) [not null]
  completed boolean [default: false, not null]
  created_at timestamp [default: `now()`, not null]
  updated_at timestamp [default: `now()`, not null]
  
  indexes {
    todo_list_id
    completed
  }
}
